syntax = "proto3";

package account_service.requests.user.create_user;

import "account-service/models/user.proto";

option go_package = "github.com/nicodanke/gesty-api/shared/proto/account-service/requests/user";

message CreateUserRequest {
    string name = 1;
    string lastname = 2;
    string username = 3;
    string email = 4;
    string password = 5;
    int64 roleId = 6;
    optional string phone = 7;
    optional bool active = 8;
    optional bool isAdmin = 9;
}

message CreateUserResponse {
    account_service.models.user.User user = 1;
}
